# Ugly-Synth

./: CMakeLists.txt  main.cpp  midi_test.cpp
